gitignore the generated files by atexpander.sh

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,39 @@
 r6rs
 srfi/4
 srfi/4.sld
+srfi.160.c128.scm
+srfi.160.c64.scm
+srfi.160.f32.scm
+srfi.160.f64.scm
+srfi.160.s16.scm
+srfi.160.s32.scm
+srfi.160.s64.scm
+srfi.160.s8.scm
+srfi.160.u16.scm
+srfi.160.u32.scm
+srfi.160.u64.scm
+srfi.160.u8.scm
+srfi/160/c128-impl.scm
+srfi/160/c128.sld
+srfi/160/c64-impl.scm
+srfi/160/c64.sld
+srfi/160/f32-impl.scm
+srfi/160/f32.sld
+srfi/160/f64-impl.scm
+srfi/160/f64.sld
+srfi/160/s16-impl.scm
+srfi/160/s16.sld
+srfi/160/s32-impl.scm
+srfi/160/s32.sld
+srfi/160/s64-impl.scm
+srfi/160/s64.sld
+srfi/160/s8-impl.scm
+srfi/160/s8.sld
+srfi/160/u16-impl.scm
+srfi/160/u16.sld
+srfi/160/u32-impl.scm
+srfi/160/u32.sld
+srfi/160/u64-impl.scm
+srfi/160/u64.sld
+srfi/160/u8-impl.scm
+srfi/160/u8.sld
